--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -105,7 +105,7 @@
   <h4>How do I learn about updates?</h4>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h4>How do I support Pretty Princess Club and Royal Vegas Retreat?</h4>
-<p>Buy some merch or send us a donation at our <a href="https://shop.prettyprincess.club">shop</a>, and become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
+<p>Become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
   <h4>How will this event be affected by COVID-19?</h4>
   <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
   <p>Please note that ALL ATTENDEES MUST BE FULLY VACCINATED TO ATTEND ROYAL VEGAS RETREAT 2021. "Fully vaccinated" means that it has been at least 2 weeks since their final dose of vaccine. Attendees must show proof of vaccination to pick up their badge. Attendees arriving from inside the US must show their vaccine card. Please stay tuned for concrete guidance on proof of vaccination for attendees outside of the US.</p>
@@ -135,18 +135,10 @@
       <li><b>Partner Pass</b>: $20</li>
     </ul>
   </p>
-  <h4>I have a discount code for a ticket. When can I use it?</h4>
-  <p>You can use a discount code to buy your ticket anytime while full-price ticket sales are open. You cannot use your discount code on ticket reservations.</p>
-  <h4>Will you sell single-day tickets?</h4>
-  <p>We will not sell single-day tickets in 2021.</p>
   <h4>Will you sell tickets at the event?</h4>
   <p>We will not sell tickets at the event - you must buy your ticket online before October 19.</p>
-  <h4>I tried to use a discount code to buy my ticket, but it didn't work! What do I do?</h4>
-  <p>Oh no! <a href="../about/contact.html">Contact us</a> right away, and provide a picture of your promo code. We will fix it ASAP!</p>
   <h4>I bought a ticket, but it turns out I can't go to Royal Vegas Retreat. Can I get a refund?</h4>
-  <p>We will allow refunds, no questions asked, between October 16 and November 17 2021. This is to allow attendees to make a safe choice regarding their attendance this year.</p>
-  <h4>I have a discount code for a ticket, but I won't be able to go to Royal Vegas RetreatR. Can I give the ticket to a friend?</h4>
-  <p>Yes! As long as you haven't already used your code to buy a ticket, you can gift it to a friend.</p>
+  <p>We will allow refunds, no questions asked, between October 16 and November 17 2021. This is to allow attendees to make a safe choice regarding their attendance this year. Please email us at <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a> with your first and last name as listed on the ticket and your order number.</p>
   <h4>Do I need a VIP ticket to attend the Sunday afternoon tea party?</h4>
   <p>No! The tea party is included with all GA and VIP tickets by default.</p>
   <h3 class="section-header">Dress Code Policy</h3>
