--- a/event/programming.html
+++ b/event/programming.html
@@ -99,7 +99,6 @@
   <p>We're planning an incredible event stacked with fashion shows, a tea party, games, panels, and shopping.</p>
   <p>We will release more information about official event programming as we get closer to the event, including special guest panels and VIP events.</p>
   <p>Community panel applications are now closed. We will notify prospective panelists of acceptance, rejection, or waitlist status by October 9.</p>
-  <p>Fashion show model applications are now open. <a href="https://fluffyshow.com">Sign up now on Fluffy Show</a>, or see our <a href="./fashion-show.html">Fashion Show page for more details</a>.</p>
   <p>Coord contest entries will open starting October 12. See our <a href="./coord-contests.html">Coord Contests page</a> for more info.</p>
   <p>Interested in casual excursions around the strip? Join our <a href="https://www.facebook.com/groups/royalvegasretreat">Facebook group</a> to help us plan!</p>
   <p>Check out our tentative schedule below - subject to change prior to event.</p>
@@ -110,13 +109,12 @@
   <h2 class="section-header">Day 1</h2>
   <h3 class="section-header">Friday, November 19 2021</h3>
   <h4>VIP Mixer</h4>
-  <p>Calling all VIPs! Get your pre-funk on bright and early on Friday for an exclusive mixer. Meet your fellow VIPs and get some early shopping time in!</p>
+  <p>Calling all VIPs! Get your pre-funk on bright and early on Friday for an exclusive mixer (with alcoholic beverages available for purchase for those who are 21+). Meet your fellow VIPs and get some early shopping time in!</p>
   <p><b>VIP Perk:</b> This event is open to VIPs, special guests, and staff only.</p>
   <h4>Shopping</h4>
   <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Fashion Shows</h4>
   <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
-  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show and apply today!</a> See our <a href="./fashion-show">Fashion Show page</a> for more information.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion General</h4>
   <p>Love to compete? Put your coording skills to the test. All Lolita fashion and Lolita-adjacent (i.e. Ouji, EGA, fusion with other J-fashion, etc.) coordinates welcome. See our <a href="./coord-contests.html">Coord Contests page</a> for more information.</p> 
@@ -127,8 +125,8 @@
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
   <p>Attendees will present panels on a variety of Lolita and J-fashion topics. Stay tuned for more info!</p>
-  <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls, including movie screenings and an <a href="./open-mic.html">open mic night</a> in a fun, chill atmosphere - stay tuned for more details!</p>
+  <h4>Open Mic Night</h4>
+  <p>Bring your talents, skits, comedy, and more! Alcoholic beverages will be available for purchase for those who are 21+. See our <a href="./open-mic.html">open mic night</a> page for details.</p>
 
   <h2 class="section-header">Day 2</h2> 
   <h3 class="section-header">Saturday, November 20 2021</h3>
@@ -138,7 +136,6 @@
   <p>Support the secondhand market! Shop 'til you drop or <a href="https://www.eventbrite.com/e/rvr-2021-swap-meet-tickets-168024398499">sign up to sell starting September 6</a>. See our <a href="./swap-meet.html">Swap Meet page</a> for more details.</p>
   <h4>Fashion Shows</h4>
   <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
-  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show and apply today!</a> See our <a href="./fashion-show">Fashion Show page</a> for more information.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion Handmade</h4>
   <p>Are you a talented sewist who regularly makes their own coords? Wear your best handmade outfit - by which we mean all main pieces (dresses, blouses, skirts, trousers, vests, etc.) must be handmade by you! Entrants are not required to make their own shoes, socks, accessories, or jewelry, but we strongly encourage you to show off as much of your handiwork as possible! See our <a href="./coord-contests.html">Coord Contests page</a> for more information.</p>
@@ -149,8 +146,8 @@
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
   <p>Attendees will present panels on a variety of Lolita and J-fashion topics. Stay tuned for more info!</p>
-  <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls, including movie screenings and an <a href="./open-mic.html">open mic night</a> in a fun, chill atmosphere - stay tuned for more details!</p>
+  <h4>Movie Screening</h4>
+  <p>Cuddle up with a Lolita fashion movie classic and an adult beverage (for those 21+) to wind down your Saturday night.</p>
 
   <h2 class="section-header">Day 3</h2>
   <h3 class="section-header">Sunday, November 21 2021</h3>
