--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -94,7 +94,7 @@
 
 <div class="row content">
     <h1>RVR Special Guests</h1>
-  <p>We are so excited to have all of our wonderful special guests at our 2021 event! We will be gradually adding our special guests to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed special guests (so far!) for 2021 (in alphabetical order):</p>
+  <p>We are so excited to have all of our wonderful special guests at our 2021 event! Scroll to learn more about our confirmed special guests for 2021 (in alphabetical order):</p>
   <hr>
   <h2><a href="https://ko-fi.com/avina">Avina-Kei</a></h2>
     <div class="row">
