--- a/event/vendors.html
+++ b/event/vendors.html
@@ -97,7 +97,7 @@
   <h1 class="sec01">
   <h1>RVR Vendors</h1>
   <hr>
-  <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021 (in alphabetical order):</p> 
+  <p>We are so excited to have all of our wonderful vendors at our 2021 event! Scroll to learn more about our confirmed vendors for 2021 (in alphabetical order):</p> 
 <hr>
   <h2><a href="https://bbandb.net/">BB&B</a></h2>
       <div class="row">
