add table swap partner

--- a/vegas.html
+++ b/vegas.html
@@ -136,8 +136,10 @@
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
 <p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/vendors/kaneko.jpg" width="200" class="img-fluid" alt="Kaneko logo"/></a><a href="https://strawberry-teapot.myshopify.com/"><img src="./images/strawberryteapot.png" width="200" class="img-fluid" alt="Strawberry Teapot logo"/></a><a href="https://lucyandodie.com/"><img src="images/Lucy_Odie_logo.jpg" width="200" class="img-fluid" alt="Lucy and Odie logo"/></a></p>
+<p>More sponsors to be announced!</p>
 <h2 class="section-header">Partner Organizations</h2>
 <p><a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> ♥ <a href="https://www.roseforet.com/">Rosé Forêt</a> ♥ <a href="https://www.kawaiiriot.org">Kawaii Riot</a></p>
+<p>Table Swap Partner: <a href="https://tekko.us">Tekko</a></p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
