Add photo release page to site

--- a/about/coc.html
+++ b/about/coc.html
@@ -124,7 +124,7 @@
 <li>any accessory with an obvious sexual purpose beyond fashion</li>
 </ul>
 <p>Attendees will be asked to put these items away if shown, and refusal to do so will be interpreted as harassment.</p>
-<p>PPC will record and photograph our events, and any attendee present may have their image used on our website or social media.</p>
+<p>Please see our <a href="./photo-release.html">Photo Release page</a> to understand how your image or likeness will be used by PPC if you attend an in-person event.</p>
 <p>PPC is committed to providing an accessible experience at large events by</p> 
 <ul>
 <li>working with ADA-compliant venues</li>
