--- a/about/photo-release.html
+++ b/about/photo-release.html
@@ -71,7 +71,7 @@
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
             <a href="../about/contact.html">Contact Us</a></br>
-            <a href="../about/privacy.html" class="active">Privacy Policy</a></br>
+            <a href="../about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -95,21 +95,19 @@
   <body>
     <div class="hero">
 
-    <h1>Privacy Policy</h1>
+    <h1>Photo Release</h1>
 
 
 </div>
 
 <div class="row content">
-<p>Our privacy policy is pretty simple: prettyprincess.club does not collect any information from you at any time, for any reason. Our site is built on AWS: it is statically hosted in S3 and served via CloudFront and Route 53. S3 logs interactions with our website, but we do not use these logs for any reason.</p>
-<p>On our site, we pull in some libraries and fonts from Google, and Google may receive some information about your activity indirectly. You can validate this using a tool called <a href="https://themarkup.org/blacklight?url=prettyprincess.club">Blacklight from The Markup</a>.</p>
-<p>We sell tickets using Eventbrite. We use the personal info collected there, i.e. your first and last name and email address, to match your registration with your badge when you arrive at our event. We use your dietary restriction information to determine what to serve you at afternoon tea. All other interactions are subject to <a href="https://www.eventbrite.com/support/articles/en_US/Troubleshooting/eventbrite-privacy-policy?lg=en_US">Eventbrite's privacy policy</a>.</p>
-<p>In 2021, at our event, we will ask all attendees to show us proof of vaccination and their ID (which may both use a legal name which is different from the chosen name we have on file). We will not collect or store this information electronically for any reason.</p>
-<p>Please see our <a href="./photo-release.html">Photo Release page</a> to understand how your image or likeness will be used by PPC if you attend an in-person event.</p>
-<p>The MGM Grand uses Passkey to allow attendees to reserve rooms at our room block rate. Interactions with Passkey are subject to <a href="https://www.cvent.com/en/privacy-policy">their privacy policy.</a></p>
-<p>Our webshop is built using Square's eCommerce suite (formerly Weebly). Your interactions there are subject to <a href="https://www.weebly.com/privacy">Weebly's privacy policy</a> (we've linked the seller-facing policy so you can see what we're subject to), and you can also validate how your information is used with <a href="https://themarkup.org/blacklight?url=shop.prettyprincess.club">Blacklight</a>. If you buy something from us, we will use your shipping address to determine where and how the items should be shipped.</p>
-<p>Our hybrid blog and email list is built on Buttondown, and your interactions there are subject to <a href="https://buttondown.email/privacy">Buttondown's privacy policy.</a> You can validate how your information is used with <a href="https://themarkup.org/blacklight?url=buttondown.email">Blacklight</a>.</p>
-<p>You can find us on various other social media sites, and any interactions you have with us there are subject to those sites' individual privacy policies.</p>
+<p>When you enter a Pretty Princess Club Event space, you enter an area where photography, audio, and video recordings may occur.</p> 
+<p>By entering the event premises, you consent to photography, audio recordings, video recordings and its/their release, publication, exhibition or reproduction.</p> 
+<p>This media may be used for promotional purposes, which may appear on the Pretty Princess Club website, newsletter, social media outlets, or any other purpose by Pretty Princess Club and its affiliates.</p> 
+<p>By entering the event premises, you agree to the usage of your likeness in such media.</p>
+<p>You release and discharge Pretty Princess Club and it’s team from any and all claims whatsoever in connection with the use of the Likeness.</p> 
+<p>You also waive any right to inspect or approve any photo, video or audio recording taken by Pretty Princess Club or the person or entity designated to do so by Pretty Princess Club. </p>
+<p>You have been fully informed of your consent, waiver of liability, and release before entering the event. </p>
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="../js/popper.min.js"></script>
