--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -101,7 +101,7 @@
   <h4>Where will Royal Vegas Retreat 2021 take place?</h4>
   <p>Royal Vegas Retreat will take place at the MGM Grand Resort and Casino in Las Vegas, Nevada, United States of America.</p>
   <h4>Is Royal Vegas Retreat an all-ages event?</h4>
-  <p>Royal Vegas Retreat attendees must be 13 or over to buy a ticket. However, VIP ticket holders must be over 21 at the time of the event to attend the VIP-exclusive before- and after-parties. We expect the majority of our attendees to be adults over 21. Minors should travel with a guardian, parent, or trusted person over 21.</p>
+  <p>Royal Vegas Retreat attendees must be 13 or over to buy a ticket. We expect the majority of our attendees to be adults over 21. Minors should travel with a guardian, parent, or trusted person over 21.</p>
   <h4>How do I learn about updates?</h4>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h4>How do I support Pretty Princess Club and Royal Vegas Retreat?</h4>
