--- a/event/programming.html
+++ b/event/programming.html
@@ -97,6 +97,7 @@
   <h1>RVR Programming</h1>
   <hr>
   <p>All main stage content will be broadcast live on <a href="https://twitch.tv/jfashionondemand">the JFashion On Demand Twitch channel</a> unless otherwise noted.</p>
+  <p>See our <a href="./venue.html">venue page</a> for maps of the venue.</p>
   <p>Check out our schedule below - subject to change prior to event.</p>
   <h2 class="section-header">Before the Event - Thursday, November 18 2021</h2>
   <h4>VIP, Staff, Volunteer, Special Guest, and Vendor Registration</h4>
@@ -116,7 +117,7 @@
 <p>10:00 AM - 12:00 PM</p>
 <p>Location: Flex Space and Vendors’ Room</p>
 <p>Calling all VIPs! Join us for 2 hours of exclusive shopping time and socializing with VIPs, staff, and special guests. Coffee, tea, fruit, and pastries will be available to munch on, and alcoholic beverages will be available to purchase for VIPs over 21.</p>
-<h4>Shopping</h4>
+<h4><a href="./vendors.html">Shopping</a></h4>
 <p>12:00 PM - 6:00 PM</p>
 <p>Location: Vendors’ Room</p>
 <p>Browse and shop our vendors’ wares all weekend long!</p>
@@ -137,7 +138,7 @@
 <p>2:00 PM - 2:50 PM</p>
 <p>Location: Community Stage</p>
 <p>Join designer and stylist ZipperTan as she shares the secrets of 15+ years of experience on how to look and feel your best while wearing J-Fashion!  Come and learn about the essentials of Basic and Advanced Colour Theory, Posing For Photos 101, and The Best Dress For Skin Tones and Body Types.  There may even be some exciting prizes (but hopefully no thimbles) for some lucky panel participants in attendance!</p>
-<h4>Fashion Show: All Things J-Fashion</h4>
+<h4><a href="./fashion-show.html">Fashion Show: All Things J-Fashion</a></h4>
 <p>3:00 PM - 4:20 PM</p>
 <p>Location: Main Stage</p>
 <p>See J-fashion looks from Fluffy Tori, GHOST GiRL GOODS, KittyKaya, Kuroshiro Kawaii, Puvithel, and The Black Ribbon on stage. For J-fashion generalists and diehard Lolitas alike, this show will amaze and inspire everyone! Featuring Alexia of GHOST GiRL GOODS as emcee.</p>
@@ -153,7 +154,7 @@
 <p>5:30 PM - 6:20 PM</p>
 <p>Location: Community Stage</p>
 <p>Join us as we share the story of how GHOST GiRL GOODS began, our collaborations with various Japanese fashion designers, and events along the way. From the beginning drawings of GHOST GiRL to the New Generation Kawaii tour with 6%DOKIDOKI, we hope this insiders panel will be filled with fun for everyone!</p>
-<h4>Lolita Fashion Coord Contest</h4>
+<h4><a href="./coord-contests.html">Lolita Fashion Coord Contest</a></h4>
 <p>7:00 PM - 7:50 PM</p>
 <p>Location: Main Stage</p>
 <p>See our contestants show off their best Lolita fashion coordinates! Judges and prizes to be announced.</p>
@@ -169,18 +170,18 @@
 <p>8:30 PM - 10:30 PM</p>
 <p>Location: Flex Space</p>
 <p>A bar will be open in the Flex Space starting at 8:30 PM with alcoholic drinks available to purchase for attendees over 21. Mingle, socialize, and please drink responsibly!</p>
-<h4>Petti Drama: An Open Mic Night</h4>
+<h4><a href="./open-mic.html">Petti Drama: An Open Mic Night</a></h4>
 <p>9:00 PM - 10:30 PM</p>
 <p>Location: Main Stage</p>
 <p>Watch your fellow RVR attendees sing, dance, and perform on stage! Please be aware that some acts, particularly comedians, may play to an older audience.</p>
 <p>This main stage event will not be streamed on Twitch.</p>
   <h2 class="section-header">Day 2</h2> 
   <h3 class="section-header">Saturday, November 20 2021</h3>
-<h4>Swap Meet</h4>
+<h4><a href="swap-meet.html">Swap Meet</a></h4>
 <p>10:00 AM - 2:00 PM</p>
 <p>Location: Flex Space</p>
 <p>Browse, haggle over, and shop for secondhand goods from fellow attendees!</p>
-<h4>Shopping</h4>
+<h4><a href="./vendors.html">Shopping</a></h4>
 <p>10:00 AM - 6:00 PM</p>
 <p>Location: Vendors’ Room</p>
 <p>Browse and shop our vendors’ wares all weekend long!</p>
@@ -201,7 +202,7 @@
 <p>1:00 PM - 1:50 PM</p>
 <p>Location: Main Stage</p>
 <p>Looking to start a new alternative fashion community in your city? Trying to revitalise one that has become inactive during the pandemic? Join Kawaii Riot's Jade and Avina for an informative and light-hearted panel about starting a fun community with inclusivity at the center! We'll discuss moderating processes, tools for different social media platforms, and meaningful rules to include in community terms to ensure that everyone can feel safe and heard while engaging in a hobby they love!</p>
-<h4>Fashion Show: Lolita Fashion</h4>
+<h4><a href="./fashion-show.html">Fashion Show: Lolita Fashion</a></h4>
 <p>3:00 PM - 4:20 PM</p>
 <p>Location: Main Stage</p>
 <p>See Lolita fashion looks from Enchanted Dream Couture, Flores Astorum, Fluffy Tori, KittyKaya, Kuroshiro Kawaii, Puvithel, and The Black Ribbon. For new Lolitas and seasoned veterans alike, this show is sure to impress and excite every guest! Featuring Alexia of GHOST GiRL GOODS as emcee.</p>
@@ -217,7 +218,7 @@
 <p>5:30 PM - 6:20 PM</p>
 <p>Location: Community Stage</p>
 <p>Join Toastchan to learn about Otome Road - small area of Ikebukuro that contains attractions for otaku girls! Everything from a Butler Cafe to cosplay shops with more wig colors than Toast has ever seen.</p>
-<h4>Handmade Lolita Fashion Coord Contest</h4>
+<h4><a href="./coord-contests.html">Handmade Lolita Fashion Coord Contest</a></h4>
 <p>6:30 PM - 7:20 PM</p>
 <p>Location: Main Stage</p>
 <p>See our contestants show off their best handmade Lolita fashion coordinates! Judges and prizes to be announced.</p>
@@ -245,7 +246,7 @@
 <p>This main stage event will not be streamed on Twitch.</p>
   <h2 class="section-header">Day 3</h2>
   <h3 class="section-header">Sunday, November 21 2021</h3>
-<h4>Shopping</h4>
+<h4><a href="./vendors.html">Shopping</a></h4>
 <p>10:00 AM - 2:00 PM</p>
 <p>Location: Vendors’ Room</p>
 <p>Browse and shop our vendors’ wares all weekend long!</p>
