--- a/event/venue.html
+++ b/event/venue.html
@@ -99,7 +99,14 @@
   <hr>
   <p>We can't wait to welcome you to the <a href="https://mgmgrand.mgmresorts.com/en.html">MGM Grand Las Vegas</a>, in the heart of the Vegas Strip.</p>
   <p>Room reservations are now closed, but you can look up your reservation using our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>: <a href="https://book.passkey.com/go/sroy1121mg">https://book.passkey.com/go/sroy1121mg</a>.</p>
-
+  <p>We will be in rooms 355-362 of the Chairman's Ballroom at the MGM Grand (<a href="../images/mgm-grand-meetings-meeting-map-diagram-conference-center-level-three.pdf">pdf</a>). The rooms are arranged as follows:
+    <ul><li>Room 355-356: Vendors' Room</li>
+      <li>Room 357-358: Community Stage</li>
+      <li>Room 359-360: Flex Space</li>
+      <li>Room 361-362: Main Stage</li>
+    </ul>
+  </p>
+<p>Please see <a href="../images/venue_map_with_accessible_routes.pdf">this PDF</a> for maps indicating how to get from the hotel lobby to the RVR space. Elevators are marked with yellow stars</p>
   <p>Visit the <a href="https://mgmgrand.mgmresorts.com/en.html">MGM Grand</a> site to learn more about the amenities available at the venue.</p>
 
   <p>Wondering what adventures await you on the Vegas Strip? Visit our <a href="./tourists.html">Tourism recommendations</a> for our favorite things to do on the strip.</p>
