Add link to schedule

--- a/vegas.html
+++ b/vegas.html
@@ -97,6 +97,7 @@
     <h3>MGM Grand Las Vegas, NV</h3>
     <h3>November 19 - November 21, 2021</h3>
 <h1 class="sec01">
+  <p>Preview our schedule on our <a href="./event/programming.html">Programming page</a>!</p>
 <p>
    ♥ <a href="./event/coord-contests.html">Coord Contests</a> ♥ 
    <a href="./event/event-faq.html">Event FAQ</a> ♥ 
