update VIP badge pickup time

--- a/event/programming.html
+++ b/event/programming.html
@@ -101,9 +101,9 @@
   <p>Check out our schedule below - subject to change prior to event.</p>
   <h2 class="section-header">Before the Event - Thursday, November 18 2021</h2>
   <h4>VIP, Staff, Volunteer, Special Guest, and Vendor Registration</h4>
-<p>4:00 PM - 8:00 PM</p>
-<p>Location: Con Suite</p>
-<p>Pick up your badge early in our con suite! Exact con suite room number to be shared once we check in - thanks for your patience!</p>
+<p>5:00 PM - 8:00 PM</p>
+<p>Location: Registration Desk</p>
+<p>Head over to our space and pick up your badge early!</p>
   <h2 class="section-header">Day 1</h2>
   <h3 class="section-header">Friday, November 19 2021</h3>
   <h4>Staff and Volunteer Registration Opens</h4>
