Add coord contest prize sponsors to site

--- a/vegas.html
+++ b/vegas.html
@@ -137,7 +137,13 @@
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
 <p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/vendors/kaneko.jpg" width="200" class="img-fluid" alt="Kaneko logo"/></a><a href="https://strawberry-teapot.myshopify.com/"><img src="./images/strawberryteapot.png" width="200" class="img-fluid" alt="Strawberry Teapot logo"/></a><a href="https://lucyandodie.com/"><img src="images/Lucy_Odie_logo.jpg" width="200" class="img-fluid" alt="Lucy and Odie logo"/></a></p>
-<p>More sponsors to be announced!</p>
+<p></a><a href="https://fluffytori.com"><img src="images/vendors/fluffytori.png" width="200" class="img-fluid" alt="Fluffy Tori logo" /></a><a href="https://haenulishop.com"><img src="images/vendors/haenuli.png" width="200" class="img-fluid" alt="Haenuli logo"/></a><a href="https://lief.co.kr"><img src="images/vendors/lief.png" width="200" class="img-fluid" alt="Lief logo"/></a></p>
+<p><a href="https://www.etsy.com/shop/kittykaya"><img src="images/vendors/KittykayaLogo.png" width="200" class="img-fluid" alt="Kittykaya logo"/></a><a href="https://kskawaii.com/"><img src="images/vendors/kuroshirokawaii.jpg" class="img-fluid" width="200" alt="Kuroshiro Kawaii logo"/></a><a href="https://theblackribbon.com/"><img src="images/vendors/theblackribbon.png" width="200" class="img-fluid" alt="The Black Ribbon logo"/></a><a href="https://twootietarte.com/"><img src="images/vendors/twootietarte.png" width="200" class="img-fluid" alt="Twootie Tarte logo"/></a></p>
+<p>
+  <a href="https://avataradesigns.com">Avatara Designs</a> ♥ <a href="https://www.etsy.com/shop/IrisGardenByIris">Iris Garden</a>
+</p>
+
+
 <h2 class="section-header">Partner Organizations</h2>
 <p><a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> ♥ <a href="https://www.roseforet.com/">Rosé Forêt</a> ♥ <a href="https://www.kawaiiriot.org">Kawaii Riot</a></p>
 <p>Table Swap Partner: <a href="https://tekko.us">Tekko</a></p>
