--- a/event/programming.html
+++ b/event/programming.html
@@ -93,6 +93,11 @@
 
 <div class="row content">
 
+    <h1 class="sec01">
+  <h1>RVR Guidebook</h1>
+  <hr>
+  <p><a href="../images/RVR_Guidebook_2021.pdf">Click here to view our digital guidebook!</a></p>
+
   <h1 class="sec01">
   <h1>RVR Programming</h1>
   <hr>
@@ -263,12 +268,6 @@
 <p>7:00 PM - 9:00 PM</p>
 <p>Location: Flex Space and Community Stage</p>
 <p>This is an exclusive event to thank our special guests, staff, vendors, VIPs, and volunteers. Enjoy some appetizers and desserts and unwind from the weekend together (feel free to bring an adult beverage to enjoy if you’re over 21). We’ll see you next year!</p>
-  <hr>
-
-  <h1 class="sec01">
-  <h1>RVR Guidebook</h1>
-  <hr>
-  <p>We will release the official digital guidebook prior to the event. Stay tuned!</p>
   
   <hr>
 
