--- a/vegas.html
+++ b/vegas.html
@@ -96,45 +96,16 @@
 
     <h3>MGM Grand Las Vegas, NV</h3>
     <h3>November 19 - November 21, 2021</h3>
-<h1 class="sec01">
-  <p>Preview our schedule on our <a href="./event/programming.html">Programming page</a>!</p>
-<p>
-   ♥ <a href="./event/coord-contests.html">Coord Contests</a> ♥ 
-   <a href="./event/event-faq.html">Event FAQ</a> ♥ 
-   <a href="./event/fashion-show.html">Fashion Show</a> ♥ 
-   <a href="./event/open-mic.html">Open Mic Night</a> ♥ 
-   <a href="./event/panels.html">Panels</a> ♥ <br>
-    ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
-              <a href="./event/reg.html">Registration</a> ♥ 
-              <a href="./event/special-guests.html">Special Guests</a> ♥ 
-              <a href="./event/swap-meet.html">Swap Meet</a>  ♥ <br>
-               ♥ <a href="./event/tourists.html">Tourists</a> ♥ 
-              <a href="./event/vendors.html">Vendors</a> ♥
-              <a href="./event/venue.html">Venue</a> ♥
-              <a href="./event/volunteers.html">Volunteers</a> ♥ </p>
 
 <h1 class="sec01">
-<h2 class="section-header">What is it?</h2>
-<p>It’s a 3-day, full-weekend, Lolita fashion convention-style event. It's for you and every fashionista who loves EGL. It’s a weekend of shopping, learning, and partying with your Best Fashion Friends. It’s a time to unwind, relax, and engage in your favorite hobby. It’s a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
-<p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./about.html">our About page</a>.</p>
-<h2 class="section-header">What about COVID-19?</h2>
-  <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
-  <p>Please note that ALL ATTENDEES MUST BE FULLY VACCINATED TO ATTEND ROYAL VEGAS RETREAT 2021. "Fully vaccinated" means that it has been at least 2 weeks since their final dose of vaccine. Attendees must show proof of vaccination to pick up their badge. Attendees arriving from inside the US must show their vaccine card. Please stay tuned for concrete guidance on proof of vaccination for attendees outside of the US.</p>
-  <p>All attendees must wear a face mask except when eating or drinking at Royal Vegas Retreat 2021.</p>
-  <p>While we are not enforcing social distancing at our event, please be respectful and err on the side of giving space to people outside of your household or travel group. We are working with the venue to ensure that our floor plans provide everyone ample space.</p>
-<h2 class="section-header">What's the Theme of Royal Vegas Retreat 2021?</h2>
-<p>The theme for Royal Vegas Retreat 2021 will be “Alice in Vegas”!</p>
-<p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
-<p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
-<h2 class="section-header"></a>Where do I sign up?</h2>
-<p>Room block bookings and registration for RVR 2021 are now closed. Thank you for your support and enthusiasm! You can watch most of our main stage content live on <a href="https://twitch.tv/jfashionondemand">the JFashion on Demand Twitch channel</a>, and community stage content will be uploaded to YouTube after the event.</p>
-<h2 class="section-header">How do I learn about updates?</h2>
-<p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
-<h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
-<p>Become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
-<h2 class="section-header">I have a question!</h2>
-<p>Please see our <a href="./event/event-faq.html">event FAQ page</a> for more information about our event. If your question isn't answered there, see our <a href="./contact.html">Contact Us page</a>.</p>
-<h2 class="section-header">Our Sponsors</h2>
+<h2 class="section-header">Thank you for attending RVR 2021!</h2>
+<p>Thank you all so much for your support and enthusiasm!</p>
+<p>Our <a href="https://shop.prettyprincess.club">official merchandise shop</a> is now open! If you missed out on any of our merch at the event, you can buy it now at <a href="https://shop.prettyprincess.club">shop.prettyprincess.club</a>.</p>
+<p>Please fill out our <a href="https://forms.gle/Ap33LsLyikBtrkNj9">event survey</a> and <a href="https://forms.gle/6qkwqqa3tBEsJuDW7">individual panel survey</a> by January 3, 2022. Your feedback will inform our future events!</p>
+<p>Check out our <a href="https://photos.app.goo.gl/vF8LGsKs1UeosavC9">official photo album</a> with photos courtesy of <a href="https://instagram.com/u.m.cos">Meela</a> and our <a href="https://photos.app.goo.gl/bn5TVZ1C4LMckmJX6
+">community-contributed photo album!</a> If you're interested in sharing your photos to the community-contributed photo album, let us know at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
+<p>You can watch our event content on our <a href="https://www.youtube.com/playlist?list=PL3P104wIxE2ufYTiVn8mEizVvBjl7NL6L">official YouTube playlist!</a></p>
+<h2 class="section-header">Our 2021 Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
 <p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/vendors/kaneko.jpg" width="200" class="img-fluid" alt="Kaneko logo"/></a><a href="https://strawberry-teapot.myshopify.com/"><img src="./images/strawberryteapot.png" width="200" class="img-fluid" alt="Strawberry Teapot logo"/></a><a href="https://lucyandodie.com/"><img src="images/Lucy_Odie_logo.jpg" width="200" class="img-fluid" alt="Lucy and Odie logo"/></a></p>
 <p><a href="https://avataradesigns.com"><img src="images/avataradesigns.jpg" class="img-fluid" width="200" alt="Avatara Designs logo"/></a><a href="https://fluffytori.com"><img src="images/vendors/fluffytori.png" width="200" class="img-fluid" alt="Fluffy Tori logo" /></a><a href="https://haenulishop.com"><img src="images/vendors/haenuli.png" width="200" class="img-fluid" alt="Haenuli logo"/></a> <a href="https://www.etsy.com/shop/IrisGardenByIris"><img src="images/irisgarden.jpg" class="img-fluid" width="200" alt="Iris Garden Logo"/></a><p><a href="https://lief.co.kr"><img src="images/vendors/lief.png" width="200" class="img-fluid" alt="Lief logo"/></a>
