Initial COC revision

--- a/about/coc.html
+++ b/about/coc.html
@@ -139,6 +139,37 @@
 <h2>Social Media Policies</h2>
 <p>Social media accounts on Facebook, Instagram, Twitter, or any other platform, that are explicitly for the purposes of fetish play or promoting kink culture, especially DDLG and ABDL, may not follow any Pretty Princess Club social media account. This is for the safety of our followers and to ensure that our accounts don't become desirable targets for fetish mining. Any fetish account that follows us will be blocked. If you happen to notice a fetish account in our followers, please let us know via DM or email us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
 <p>We ask that, when commenting on our posts on any platform, you engage in good faith at all times. Any comment interpreted as harrassment or trolling may be removed with no explanation, and the account providing the comment may be blocked.</p>
+<h2>Staff and Volunteer Code of Conduct</h2>
+<p>This section goes into effect starting January 1, 2022.</p>
+<p>We expect our staff and volunteers to act with a high degree of professionalism at all times. As de-facto representatives of PPC, staff and volunteers must uphold our values. Staff and volunteers who break our code of conduct, including any part of our general code of conduct, will not only be subject to any consequences outlined in the code of conduct, but also will not work as a staff member or volunteer at any future PPC event.</p>
+<h3>Guiding Principles</h3>
+<p><ul>
+<li>Treat all guests like they belong. Lolita and J-fashion have a reputation for being exclusive, so putting on an event for the community means making all of our guests feel welcome.</li>
+<li>Be professional. While on shift as a volunteer, or when representing Pretty Princess Club in an official capacity, you must act professionally. While many of us feel like we’re among friends and people we know while volunteering at RVR, not all of our guests are as established in the community. Refrain from making inside jokes or comments that guests will find insulting without the proper context.</li>
+<li>Ask everyone. When requesting proof of ID or for a guest to show their badge, you must ask everyone in their group. Failure to do so risks singling someone out, who may already feel unwelcome in the J-fashion community because of their race, gender identity, or age.</li>
+<li>Be direct. Avoid miscommunications by saying exactly what you mean, when you need to say it. “Can I see your badge?” is always better than whispering to another person to ask if they know the guest in question.</li>
+<li>Be accountable. We all make mistakes. When you mess up, for example, if you use the wrong pronouns for a guest, apologize briefly and sincerely and move on. Be on time for your shifts and be prepared to cover for each other when needed.</li></ul></p>
+<h3>Basic Expectations</h3>
+<p>We will revise these expectations to align with those of other events and to be as specific as is reasonable in 2022. These are a starting point for what PPC expects of all volunteers and staff.</p>
+<p>Volunteers must
+  <ul>
+  <li>Attend any training meetings held online prior to the event</li>
+<li>Read the code of conduct in full and attest that they have read it</li>
+<li>Show up on time for 100% of their shifts, or find someone who can cover for them</li>
+<li>Escalate to the appropriate staff member in case of emergency or conflict</li>
+<li>Treat all attendees, regardless of role at the event, with respect</li>
+</ul></p>
+<p>
+Staff must
+<ul>
+<li>Attend staff meetings when held, or follow up on meetings when they cannot attend by reading the notes and asking questions</li>
+<li>Fulfill 100% of their commitments at the event</li>
+<li>Fulfill 100% of their commitments before and after the event, including time-sensitive event prep</li>
+<li>Read the code of conduct in full</li>
+<li>Escalate to the appropriate staff member or venue point of contact in case of emergency or conflict</li>
+<li>Treat all attendees, regardless of role at the event, with respect</li>
+</ul></p>
+
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="../js/popper.min.js"></script>
