Update main page to set expectations for 2023; remove registration and faq from contact page

--- a/about/contact.html
+++ b/about/contact.html
@@ -101,12 +101,10 @@
 </div>
 
 <div class="row content">
-<p>For questions about Royal Vegas Retreat 2021, please see our <a href="../event/event-faq.htm">event FAQ page</a>.
 <h2>Via email</h2>
-<p>For questions about registration and tickets, send an email to <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a></p>
-<p>For all other questions, contact us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
+<p>For all questions, general inquiries, or requests, contact us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
 <h2>Via social media</h2>
-<p>We love when you like and comment on our social media posts! We cannot guarantee a response to any comments left on our social media pages. For anything that requires a response, please use our email contacts listed above.</p>
+<p>We love when you like and comment on our social media posts! We cannot guarantee a response to any comments left on our social media pages. For anything that requires a response, please use our email contact listed above.</p>
 <p>Find us on <a href="https://www.instagram.com/prettyprincess.club/">Instagram</a> at <a href="https://www.instagram.com/prettyprincess.club/">@prettyprincess.club</a>.</p>
 <p>Find us on <a href="https://www.facebook.com/ppcllcrvr/">Facebook</a> at <a href="https://www.facebook.com/ppcllcrvr/">/ppcllcrvr</a>.</p>
 <p>Find us on <a href="https://twitter.com/ppcllcrvr">Twitter</a> at <a href="https://twitter.com/ppcllcrvr">@ppcllcrvr</a>.</p>
