--- a/vegas.html
+++ b/vegas.html
@@ -99,7 +99,7 @@
 
 <h1 class="sec01">
 <h2 class="section-header">Thank you for attending RVR 2021!</h2>
-<p>Thank you all so much for your support and enthusiasm!</p>
+<p>Thank you all so much for your support and enthusiasm! We do not yet have official dates for our next Royal Vegas Retreat, but we are tentatively planning for late 2023, and we may hold smaller events outside of Las Vegas in 2022.</p>
 <p>Our <a href="https://shop.prettyprincess.club">official merchandise shop</a> is now open! If you missed out on any of our merch at the event, you can buy it now at <a href="https://shop.prettyprincess.club">shop.prettyprincess.club</a>.</p>
 <p>Please fill out our <a href="https://forms.gle/Ap33LsLyikBtrkNj9">event survey</a> and <a href="https://forms.gle/6qkwqqa3tBEsJuDW7">individual panel survey</a> by January 3, 2022. Your feedback will inform our future events!</p>
 <p>Check out our <a href="https://photos.app.goo.gl/vF8LGsKs1UeosavC9">official photo album</a> with photos courtesy of <a href="https://instagram.com/u.m.cos">Meela</a> and our <a href="https://photos.app.goo.gl/bn5TVZ1C4LMckmJX6
